# surgeon_simulator

surgery_simulator(assignment1_project_assemble )/: CMakeLists.txt
surgery_simulator(assignment1_project_assemble )/include/: tools.h
surgery_simulator(assignment1_project_assemble )/src/: Point.cpp  main.cpp
